# JVM4J

./: .gitignore  Cargo.toml  README.MD  build.gradle  settings.gradle
src/main/kotlin/dev/binclub/jvm4j/: JNI4J.kt  JVM4J.kt  JavaVM.kt  Jmm.kt  Jvmti.kt  Loader.kt
src/main/rust/: jni.rs  jvm.rs  jvmti.rs  lib.rs
src/test/java/: JniTest.java  JvmTest.java  JvmtiTest.java
src/test/kotlin/: ClassHookTest.kt  JvmTest.kt
