[package]
name = "JVM4J"
version = "0.1.0"
authors = ["mastercooker <c.o.okiedragon234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "JVM4J"
path = "src/main/rust/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rs-jvm-bindings = { git = "https://github.com/cookiedragon234/rs-jvm-bindings/" }
